--- a/stylesheet/styles.css
+++ b/stylesheet/styles.css
@@ -9,6 +9,11 @@
 html{
 font-family: 'Work Sans', sans-serif;
 font-size: 1em;
+width: 100%;
+height: 100%;
+margin: 0px;
+padding: 0px;
+overflow-x: hidden;
 }
 
 li {
@@ -166,12 +171,12 @@ p{
 
 .slick-slider{
   display: block;
-  width: 660px;
 }
 
 .slider{
+  width:100%;
+  height: auto;
   max-width: 660px;
-  position:relative;
 }
 
 .portfolio{
