--- a/stylesheet/styles.css
+++ b/stylesheet/styles.css
@@ -50,7 +50,7 @@ p{
 }
 
 .bar {
-    display: flex;
+    display: none;
     width: 25px;
     height: 3px;
     margin: 5px auto;
@@ -106,7 +106,9 @@ p{
     font-size: 1em;
 
 }
-
+.humburger{
+  display: none;
+}
 .title{
   display: flex;
   flex-flow: row;
@@ -311,6 +313,10 @@ input{
 
 @media only screen and (max-width: 768px) {
 
+    .bar{
+      display: flex;
+    }
+
     #nav-menu {
         display: none;
         position: absolute;
@@ -326,7 +332,7 @@ input{
         display:flex;
         align-items: flex-start;
         flex-direction: row;
-        padding: 2% 2%;
+        padding: 0 0;
     }
 
     .sub-menu-elements{
