--- a/stylesheet/styles.css
+++ b/stylesheet/styles.css
@@ -177,6 +177,8 @@ p{
 .portfolio{
   display: flex;
   flex-flow: column;
+  justify-content: center;
+  width: auto;
   margin-left: 19%;
   margin-right: 10%;
   margin-top: 5%;
@@ -212,7 +214,6 @@ p{
 .portfolio-text-2{
   color: red;
   font-size: 18px;
-  display: flex;
   align-self: center;
 }
 
@@ -260,11 +261,11 @@ p{
   margin-top: 40px;
   display: flex;
   flex-flow: row;
-  width: 100%;
  justify-content: center;
 }
 
 .footer-text-4{
+  width: 80%;
   color:white;
 }
 
@@ -321,6 +322,7 @@ input{
         display: none;
         position: absolute;
         top:80px;
+        left:0px;
         flex-direction: column;
         background-color: #fff;
         width: 100%;
@@ -332,7 +334,7 @@ input{
         display:flex;
         align-items: flex-start;
         flex-direction: row;
-        padding: 0 0;
+        padding: 2% 5%;
     }
 
     .sub-menu-elements{
@@ -382,8 +384,25 @@ input{
     .get-in-touch{
       margin-left: 5%;
     }
-    .get-in-touch{
+    .footer-text-1{
+      font-size: 14px;
+    }
 
+    .footer-text-2{
+      font-size: 40px;
+    }
+
+    .footer-text-3{
+      font-size: 14;
+    }
+
+    .footer-text-4{
+      width: 80%;
+      color:white;
+    }
+
+    .rights{
+      font-size: 10px;
     }
 
 
